k8s/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tender-management-portal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: tender-mgt-portal.sachinayeshmantha.live
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tender-management-portal-service
            port:
              number: 6000
